--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,16 +25,9 @@
 
 <body id="home_data">
   <div class="body">
-    <nav class="black menu-pegado">
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">ShareApp</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/">New Package</a></li>
-          <li><a href="#">Packages</a></li>
-          <li><a href="#">Edit Package</a></li>
-        </ul>
-      </div>
-    </nav>
+    <!-- menu -->
+    <%- include('../include/menu.ejs') %>
+    <!-- data -->
     <div class="left_data">
       <div class="container">
         <div class="row">
